Fix myriad display issues:  * Iron out dual scrollbar issue  * Make table headers sticky in device management dropdown body  * Restore thin gray border around dropdown body  * Enforce max height on dropdown body

--- a/frontend/src/app/Settings/Facility/Components/ManageDevices.scss
+++ b/frontend/src/app/Settings/Facility/Components/ManageDevices.scss
@@ -1,6 +1,18 @@
 .device-settings {
   .results-dropdown {
-    overflow-y: unset;
-    position: relative;
+    top: 2.5em;
+    max-height: 12.1em;
+  }
+
+  .results-dropdown__body {
+    padding: 0 0.5rem;
+
+    .usa-table--borderless {
+      th {
+        position: sticky;
+        top: 0;
+        background: white;
+      }
+    }
   }
 }
